Fix overflow display ui

--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ button{
     display: flex;
     flex-direction: row-reverse;
     font-size: 28px;
+    overflow: auto;
     
 }
 .row{
